--- a/bash/shellshock/docker-compose.yml
+++ b/bash/shellshock/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '2'
 services:
  web:
-   image: vulhub/bash:4.3.0-with-httpd
+   build:
+     context: .
+     dockerfile: Dockerfile
    ports:
     - "8080:80"
-   volumes:
-    - ./safe.cgi:/var/www/html/safe.cgi
-    - ./victim.cgi:/var/www/html/victim.cgi
